Routes add authentication middleware Some other small fixes Style fix: Remove margin class from table. And change margin-left to padding-left. Else it adds scrollbar on horizontal axis.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -379,7 +379,7 @@ main strong {
   }
 
   .section-content table {
-    margin-left: 1rem;
+    padding-left: 1rem;
   }
 
   .section-content th,
