--- a/resources/sass/_main.scss
+++ b/resources/sass/_main.scss
@@ -70,7 +70,7 @@ main {
         display:flex;
 
         table {
-            margin-left: 1rem;
+            padding-left: 1rem;
         }
 
         th,td {
